welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: '=>' expected but ':' found.
    case "R": droite();
            ^BDR2:8: error: '=>' expected but ':' found.
    case "L": gauche();
            ^BDR2:12: error: '=>' expected but ':' found.
    case "I": droite();
            ^BDR2:15: error: '=>' expected but ':' found.
    case "A": avance();
            ^BDR2:17: error: '=>' expected but ':' found.
    case "B": avance();
            ^BDR2:20: error: '=>' expected but ':' found.
    case "C": avance();
            ^BDR2:24: error: '=>' expected but ':' found.
    case "D": avance();
            ^BDR2:29: error: '=>' expected but ':' found.
    case "E": avance();
            ^BDR2:35: error: '=>' expected but ':' found.
    case "F": avance();
            ^BDR2:42: error: '=>' expected but ':' found.
    case "Z": recule();
            ^BDR2:44: error: '=>' expected but ':' found.
    case "Y": recule();
            ^BDR2:47: error: '=>' expected but ':' found.
    case "X": recule();
            ^BDR2:51: error: '=>' expected but ':' found.
    case "W": recule();
            ^BDR2:56: error: '=>' expected but ':' found.
    case "V": recule();
            ^BDR2:62: error: '=>' expected but ':' found.
    case "U": recule();
            ^